// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usingCrlf.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file

testing line endings

================================================================================
`;

exports[`usingCrlf.md 2`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file/*CR*//*CR*/testing line endings/*CR*/
================================================================================
`;

exports[`usingCrlf.md 3`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file/*CR*/
/*CR*/
testing line endings/*CR*/

================================================================================
`;

exports[`usingCrlf.md 4`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file

testing line endings

================================================================================
`;

exports[`usingLf.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file

testing line endings

================================================================================
`;

exports[`usingLf.md 2`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file/*CR*//*CR*/testing line endings/*CR*/
================================================================================
`;

exports[`usingLf.md 3`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file/*CR*/
/*CR*/
testing line endings/*CR*/

================================================================================
`;

exports[`usingLf.md 4`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file

testing line endings

================================================================================
`;
